# 206-Sadrud

./: README.md
Apr_Task/: CMakeLists.txt  Doxyfile  a.out  main.cpp  methods.cpp  tests.cpp
Apr_Task/client/: client.cpp
Apr_Task/input/: Матрица смежности графа: вершин - 10, плотность ребер - 0.200000, максимум ребер - 3.txt  Матрица смежности графа: вершин - 100, плотность ребер - 0.400000, максимум ребер - 3.txt
Apr_Task/methods/: main.cpp  methods.cpp
Apr_Task/output/: Путь по вершинам: вершин - 10, плотность ребер - 0.200000, максимум ребер - 3.txt
Apr_Task/pdf/: описание.fdb_latexmk  описание.fls  описание.tex
Apr_Task/server/: server.cpp  server_parallel.cpp
Apr_Task/tests/: tests.cpp
Dec_Task/: Makefile  MyProject  Tree.cpp  Tree.hpp  leak.out  main.cpp
Mar_Task/: CMakeLists.txt  Doxyfile
Mar_Task/Client/: client.cpp  visual.py
Mar_Task/Server/: server.cpp
Mar_Task/include/: Edge.hpp  Exception.hpp  Point.hpp  Rectangle.hpp
Mar_Task/include/Data_Structures/: BraidedNode.hpp  Dictionary.hpp  List.hpp  ListNode.hpp  Node.cpp  Node.hpp  RandomizedNode.hpp  TreeNode.hpp
Mar_Task/include/Geometry/: Axis_Parallel_Edge.cpp  Axis_Parallel_Edge.hpp  Edge.hpp  Point.hpp  Rectangle.hpp
Mar_Task/methods/: CMakeCache.txt  Makefile  Methods.cpp  Methods.hpp  MyProject  client  client.cpp  client1.cpp  cmake_install.cmake  input.txt  main.cpp  my_project  output.txt  server  server.cpp  server1.cpp  visual.py
Mar_Task/methods/Server/: Makefile  client  client.cpp  erprog.cpp  erprog.h  server  server.cpp
Mar_Task/methods/input/: Объединение лесенок.txt  Прямоугольники по диагонали.txt  Рандомные прямоугольники 2.txt  Рандомные прямоугольники 3.txt  Рандомные прямоугольники.txt  Решетка.txt  Сжимающиеся прямоугольники.txt
Mar_Task/tests/: clientTests.cpp  mainTest.cpp  test.hpp  test_core.cpp  test_core.hpp  testsCreate.cpp
Mar_Task/Отчет по задаче/: Untitled-1.aux  Untitled-1.fdb_latexmk  Untitled-1.fls  Untitled-1.tex  preambula.tex
Nov_Task/: List.cpp  List.hpp  Makefile  MyProject  main.cpp
Oct_Task/: Exception.hpp  GCD_HCF.hpp  GCD_LCM.cpp  GCD_LCM.hpp  Limits.hpp  Makefile  MyProject  main.cpp
Sept_Task/: Exception.hpp  Makefile  MyProject  Plane.cpp  Plane.hpp  main.cpp  Моя задача
